<resources>
    <string name="app_name">CoolWeather</string>
    <string name="china">中国</string>
    <string name="forecast">未来三天的天气预报</string>
    <string name="aqi">AQI指数</string>
    <string name="pm2_5">PM2.5指数</string>
    <string name="tem">℃</string>
    <string name="air_condition">空气质量</string>
    <string name="suggestions">生活建议</string>
    <string name="setting">设置</string>
    <string name="quit">退出</string>
    <string name="hourly_forecast">今日天气预报</string>
    <string name="search">输入查询的城市名称</string>
    <string name="cancel">取消</string>
    <string name="network">网络请求中</string>
    <string name="wait">waiting. . .</string>
    <string name="search_city">请输入需要查找的城市</string>
    <string name="setting_activity">设置</string>
    <string name="auto_update_time">设置自动更新的时间</string>
    <string name="auto_update">后台自动更新</string>
    <string name="location">自动定位</string>
    <string name="version_up">版本自动更新</string>
    <string name="about">关于我们</string>
</resources>
